Fix timeline card positioning - make cards closer to center line and visible

--- a/css/style.css
+++ b/css/style.css
@@ -2543,7 +2543,7 @@ button {
 /* Vertical Timeline Container */
 .experience-timeline {
     position: relative;
-    max-width: 1200px;
+    max-width: 1400px;
     margin: 0 auto;
     padding: 2rem 0;
 }
@@ -2672,19 +2672,20 @@ button {
 
 /* Timeline Content - Alternating Left/Right */
 .timeline-content {
-    width: calc(50% - 50px);
+    width: 45%;
+    max-width: 550px;
     position: relative;
 }
 
 .timeline-item:nth-child(odd) .timeline-content {
     margin-left: auto;
-    padding-left: 50px;
+    padding-left: 40px;
     text-align: left;
 }
 
 .timeline-item:nth-child(even) .timeline-content {
     margin-right: auto;
-    padding-right: 50px;
+    padding-right: 40px;
     text-align: left;
 }
 
